--- a/debian/install
+++ b/debian/install
@@ -1,1 +1,1 @@
-apache-openmeetings-3.0.7.tar.gz /usr/share/lliurex-openmeetings/
+apache-openmeetings-5.0.0-M1.tar.gz /usr/share/lliurex-openmeetings/
